test-suite/valid/assertion-minimal.glx
# TEST: assertion-minimal
# EXPECT: valid
# DESCRIPTION: Minimal valid assertion with required fields (id, version, subject_id, property)
---
id: assertion-test001
version: "1.0"
subject_id: "person-test001"
property: "birth_date"




